Fixed home styling

--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
       <div class="testimonial__section--main">
         <div class="testimonial__section--top">
           <h1>Testimonial</h1>
-          <p>We Care About Our Customers Experience Too</p>
+          <p>Customer Experience</p>
         </div>
         <div class="testimonial__section--down">
           <div class="testimonial_section--box">
@@ -273,7 +273,8 @@
               suscipit molestiae dolores eaque."
             </p>
             <h1>
-              <span class="testimonial">Subash Pariyar </span>Co-Founder of XYZ
+              <span class="testimonial">Subash Pariyar </span>
+              <br />Co-Founder of XYZ
             </h1>
           </div>
           <div class="testimonial_section--box">
@@ -287,7 +288,8 @@
               suscipit molestiae dolores eaque."
             </p>
             <h1>
-              <span class="testimonial">Subash Pariyar </span>Co-Founder of XYZ
+              <span class="testimonial">Subash Pariyar </span><br />Co-Founder
+              of XYZ
             </h1>
           </div>
           <div class="testimonial_section--box">
@@ -301,7 +303,8 @@
               suscipit molestiae dolores eaque."
             </p>
             <h1>
-              <span class="testimonial">Subash Pariyar </span>Co-Founder of XYZ
+              <span class="testimonial">Subash Pariyar </span><br />Co-Founder
+              of XYZ
             </h1>
           </div>
         </div>
