--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <!-- Navigation bar ends -->
 
     <!-- Hero section -->
-    <section class="hero__section">
+    <section id="heroSection" class="hero__section">
       <div class="hero__section--left">
         <h1>
           Welcome To <br />
@@ -72,7 +72,7 @@
     <!-- End hero section -->
 
     <!-- Category section -->
-    <section class="category__section">
+    <section id="categorySection" class="category__section">
       <div class="category__section--top">
         <h3>Which one</h3>
         <h1>Shop By Category</h1>
