--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
     <link rel="stylesheet" href="./css/global.css" />
     <link rel="stylesheet" href="./css/style.css" />
     <link rel="stylesheet" href="./css/home.css" />
+
+    <!-- Add to home screen icon -->
+    <link rel="apple-touch-icon" href="./img/logo.png" />
+    <!-- Splash Image -->
+    <link rel="apple-touch-startup-image" href="./img/loginbg.jpg" />
   </head>
 
   <body>
