made checkout page responsive

--- a/checkout.html
+++ b/checkout.html
@@ -46,6 +46,25 @@
       color: rgb(138, 243, 138);
       font-size: 6rem;
     }
+    @media only screen and (max-width: 768px) {
+  .checkout_page {
+    margin: 2rem;
+    padding: 2rem;
+  }
+
+  .checkout_page > i {
+    font-size: 4rem;
+  }
+
+  .check-out-text > h1 {
+    font-size: 1.2rem;
+  }
+
+  .check-out-text > p {
+    font-size: 0.9rem;
+  }
+}
+
   </style>
   <body>
     <header class="header">
