Done Changes in pages for Mobile specific features

--- a/login.html
+++ b/login.html
@@ -21,7 +21,15 @@
         <h2 class="form-title">Login</h2>
         <div class="f-group">
           <label for="username">Username</label>
-          <input type="text" id="username" name="username" required />
+          <input
+            autocorrect="off"
+            autocomplete="off"
+            autocapitalize="off"
+            type="text"
+            id="username"
+            name="username"
+            required
+          />
         </div>
 
         <div class="f-group">
