--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
     <link rel="apple-touch-icon" href="./img/logo.png" />
     <!-- Splash Image -->
     <link rel="apple-touch-startup-image" href="./img/loginbg.jpg" />
+    <!-- Enable full-screen mode (only when launched from home screen) -->
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <!-- Controls the appearance of the status bar in full-screen mode -->
+    <meta name="apple-mobile-web-app-status-bar-style" content="black" />
   </head>
 
   <body>
