made many changes to index file

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
           It’s a culinary hub where the rich flavors of the Caribbean are
           celebrated in every bite. 🍞🥟
         </p>
-        <button class="p-btn rounded">Check Our Menu</button>
+        <a href="./product.html" class="p-btn rounded">Check Our Menu</a>
       </div>
       <div class="hero__section--right">
         <img src="./img/bg.webp" alt="Animated Image" />
@@ -98,9 +98,10 @@
                 these handheld delights are perfect for a quick meal or snack on
                 the go.
               </p>
-              <button class="p-btn full">
+          
+              <a href="./product.html" class="p-btn full">
                 Browse Shop<i class="fa-solid fa-arrow-right"></i>
-              </button>
+              </a>
             </div>
           </div>
           <div class="border">
@@ -118,9 +119,9 @@
                 Its versatility and delicious taste make it a beloved choice for
                 many seeking meal.
               </p>
-              <button class="p-btn outline full">
+              <a href="./product.html" class="p-btn outline full">
                 Browse Shop<i class="fa-solid fa-arrow-right"></i>
-              </button>
+              </a>
             </div>
           </div>
           <div class="border">
@@ -136,9 +137,9 @@
                 enjoyed with a cup of tea or coffee. Their unique texture and
                 tropical flavor make them a beloved snack in Jamaican cuisine.
               </p>
-              <button class="p-btn full">
+              <a href="./product.html" class="p-btn full">
                 Browse Shop<i class="fa-solid fa-arrow-right"></i>
-              </button>
+              </a>
             </div>
           </div>
           <div class="border">
@@ -155,9 +156,9 @@
                 enjoyed warm or at room temperature, turnovers are a favorite
                 snack for many, perfect for any time of day.
               </p>
-              <button class="p-btn outline full">
+              <a href="./product.html" class="p-btn outline full">
                 Browse Shop <i class="fa-solid fa-arrow-right"></i>
-              </button>
+              </a>
             </div>
           </div>
         </div>
@@ -179,7 +180,7 @@
           </div>
           <div class="items__section--down">
             <img src="./img/dish/spicy.jpg" alt="" />
-            <button class="item-btn">Spicy Patty</button>
+            <button  class="item-btn">Spicy Patty</button>
           </div>
           <div class="items__section--down">
             <img src="./img/dish/spicy.jpg" alt="" />
@@ -226,9 +227,9 @@
           Iure dolorum aliquam alias voluptatem iste natus, soluta qui eveniet
           et?
         </p>
-        <button class="p-btn outline rounded">
+        <a href="./product.html" class="p-btn outline rounded">
           Shop now <i class="fa-solid fa-arrow-right"></i>
-        </button>
+        </a>
       </div>
     </section>
 
@@ -249,9 +250,9 @@
           a savory snack or meal enjoyed for its bold taste and comforting
           texture, embodying the rich culinary heritage of Jamaica.
         </p>
-        <button class="p-btn outline rounded">
+        <a href="./product.html" class="p-btn outline rounded">
           Shop now <i class="fa-solid fa-arrow-right"></i>
-        </button>
+        </a>
       </div>
       <div class="image_section--left second-left">
         <div class="image_section--left-pad"></div>
@@ -278,8 +279,8 @@
               suscipit molestiae dolores eaque."
             </p>
             <h1>
-              <span class="testimonial">Subash Pariyar </span>
-              <br />Co-Founder of XYZ
+              <span class="testimonial">Allan  </span>
+              <br />Co-Founder of Allans Pastry
             </h1>
           </div>
           <div class="testimonial_section--box">
@@ -293,7 +294,7 @@
               suscipit molestiae dolores eaque."
             </p>
             <h1>
-              <span class="testimonial">Subash Pariyar </span><br />Co-Founder
+              <span class="testimonial">Bikash Sapkota </span><br />Co-Founder
               of XYZ
             </h1>
           </div>
@@ -321,7 +322,7 @@
     <div class="contact__icon">
       <div class="icon_main">
         <i class="fa-solid fa-location-dot"></i>
-        <p>Address: 3447 Kannedy Road</p>
+        <p>Address: 3447 Kennedy Road</p>
       </div>
       <div class="icon_main">
         <i class="fa-solid fa-envelope"></i>
@@ -330,7 +331,7 @@
 
       <div class="icon_main">
         <i class="fa-solid fa-globe"></i>
-        <p>Visit: 3447 Kannedy Road</p>
+        <p>Visit: 3447 Kennedy Road</p>
       </div>
     </div>
     <!-- End of contact icons section -->
