menu bar updated

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                 these handheld delights are perfect for a quick meal or snack on
                 the go.
               </p>
-          
+
               <a href="./product.html" class="p-btn full">
                 Browse Shop<i class="fa-solid fa-arrow-right"></i>
               </a>
@@ -187,7 +187,7 @@
           </div>
           <div class="items__section--down">
             <img src="./img/dish/spicy.jpg" alt="" />
-            <button  class="item-btn">Spicy Patty</button>
+            <button class="item-btn">Spicy Patty</button>
           </div>
           <div class="items__section--down">
             <img src="./img/dish/spicy.jpg" alt="" />
@@ -277,42 +277,54 @@
         <div class="testimonial__section--down">
           <div class="testimonial_section--box">
             <div class="testimonial__img1">
-              <img src="https://media.istockphoto.com/id/639558204/photo/senior-asian-man-reading-in-study-room.jpg?s=2048x2048&w=is&k=20&c=ZOAdRu72oUun3HImqVyL4zh9GRAriF441HNO8hQ4nTc=" alt="" />
+              <img
+                src="https://media.istockphoto.com/id/639558204/photo/senior-asian-man-reading-in-study-room.jpg?s=2048x2048&w=is&k=20&c=ZOAdRu72oUun3HImqVyL4zh9GRAriF441HNO8hQ4nTc="
+                alt=""
+              />
             </div>
             <p>
-              "Allan, the founder of Allan's Pastry Shop, immigrated from Jamaica to Canada in 1970 with his daughter. Driven by his love for baking and a desire to introduce Jamaican flavors to his new home, Allan established his pastry shop with dedication and passion. 
-
-
-
-
-
-
-
-
+              "Allan, the founder of Allan's Pastry Shop, immigrated from
+              Jamaica to Canada in 1970 with his daughter. Driven by his love
+              for baking and a desire to introduce Jamaican flavors to his new
+              home, Allan established his pastry shop with dedication and
+              passion.
             </p>
             <h1>
-              <span class="testimonial">Allan Zhou  </span>
+              <span class="testimonial">Allan Zhou </span>
               <br />Co-Founder of Allans Pastry
             </h1>
           </div>
           <div class="testimonial_section--box">
             <div class="testimonial__img1">
-              <img src="https://img.freepik.com/free-photo/middle-age-woman-smiling-having-good-time_23-2149218585.jpg?size=626&ext=jpg&ga=GA1.1.1700460183.1713139200&semt=ais" alt="" />
+              <img
+                src="https://img.freepik.com/free-photo/middle-age-woman-smiling-having-good-time_23-2149218585.jpg?size=626&ext=jpg&ga=GA1.1.1700460183.1713139200&semt=ais"
+                alt=""
+              />
             </div>
             <p>
-              "Judy Zhou, Allan's daughter, now oversees production at Allan's Pastry Shop. With a blend of tradition and innovation, she ensures each pastry maintains its authentic flavor while meeting modern tastes. Judy's leadership honors her family's legacy, propelling the business forward with quality and dedication.."
+              "Judy Zhou, Allan's daughter, now oversees production at Allan's
+              Pastry Shop. With a blend of tradition and innovation, she ensures
+              each pastry maintains its authentic flavor while meeting modern
+              tastes. Judy's leadership honors her family's legacy, propelling
+              the business forward with quality and dedication.."
             </p>
             <h1>
-              <span class="testimonial">Judy Zhou </span><br />Production Incharge
-             
+              <span class="testimonial">Judy Zhou </span><br />Production
+              Incharge
             </h1>
           </div>
           <div class="testimonial_section--box">
             <div class="testimonial__img1">
-              <img src="https://media.istockphoto.com/id/1303398417/photo/senior-age-woman-who-smiles.jpg?s=2048x2048&w=is&k=20&c=DRe-mPpsUHmnv6aYDzLj2EH-5UgcAMcOH_0U6fflq40=" alt="" />
+              <img
+                src="https://media.istockphoto.com/id/1303398417/photo/senior-age-woman-who-smiles.jpg?s=2048x2048&w=is&k=20&c=DRe-mPpsUHmnv6aYDzLj2EH-5UgcAMcOH_0U6fflq40="
+                alt=""
+              />
             </div>
             <p>
-              "Karen manages the business side of Allan's Pastry Shop, handling finance, marketing, and operations with finesse. Her strategic acumen and commitment to excellence are key to the shop's continued success.She is the youngest child of Allans"
+              "Karen manages the business side of Allan's Pastry Shop, handling
+              finance, marketing, and operations with finesse. Her strategic
+              acumen and commitment to excellence are key to the shop's
+              continued success.She is the youngest child of Allans"
             </p>
             <h1>
               <span class="testimonial">Karen Zhou </span><br />Bussiness Manger
@@ -414,7 +426,7 @@
 
     <script src="./js/db.js"></script>
     <script src="./js/index.js"></script>
-    <script>
+    <!-- <script>
       var MenuItems = document.getElementById("MenuItems");
 
       MenuItems.style.maxHeight = "0px";
@@ -425,6 +437,6 @@
           MenuItems.style.maxHeight = "0px";
         }
       }
-    </script>
+    </script> -->
   </body>
 </html>
