--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="product.html">Product</a></li>
-            <li><a href="order.html">Order</a></li>
+
             <li><a href="contact.html">Contact</a></li>
           </ul>
         </div>
@@ -218,21 +218,19 @@
       <div class="image_section--right">
         <h3>White Hardo Bread</h3>
         <p>
-          Unique Bread For Lovers Lorem ipsum dolor sit amet consectetur
-          adipisicing elit. Perferendis officia qui nesciunt, dolorum expedita
-          magnam veniam, tenetur cumque nulla dolore tempore laborum iste
-          incidunt reiciendis eligendi quos repellat dolores veritatis? Lorem
-          ipsum dolor sit amet consectetur adipisicing elit. Aliquam culpa eum
-          eligendi quia assumenda, praesentium asperiores corrupti adipisci
-          ipsum, expedita quaerat odit nulla atque totam voluptas aliquid illo
-          necessitatibus quae. Lorem ipsum dolor sit amet consectetur
-          adipisicing elit. Nostrum, voluptatem sed alias veritatis dolores
-          voluptatum tempora. Cumque debitis dicta expedita, voluptate vitae
-          molestiae delectus, impedit recusandae sed quidem cum eaque. Lorem
-          ipsum dolor sit, amet consectetur adipisicing elit. Nostrum sed fugiat
-          excepturi praesentium sapiente laboriosam molestias modi enim labore!
-          Iure dolorum aliquam alias voluptatem iste natus, soluta qui eveniet
-          et?
+          Hardo bread, also known as hard dough bread, is a popular type of
+          bread commonly found in Caribbean cuisine, particularly in Jamaica. It
+          is characterized by its dense texture and slightly sweet flavor,
+          making it a versatile option for various dishes and occasions.
+          Traditionally made with flour, water, sugar, salt, yeast, and
+          sometimes milk or butter, hardo bread is kneaded thoroughly to develop
+          its dense yet soft interior. It is then baked until the crust turns
+          golden brown, resulting in a crunchy exterior that contrasts
+          beautifully with its soft, chewy center. Hardo bread is often enjoyed
+          as a staple food in Jamaican households, served alongside savory
+          dishes like ackee and saltfish, or enjoyed on its own with a spread of
+          butter or jam. Its firm texture also makes it ideal for sandwiches and
+          toast, holding up well to hearty fillings and toppings.
         </p>
         <a href="./product.html" class="p-btn outline rounded">
           Shop now <i class="fa-solid fa-arrow-right"></i>
@@ -366,11 +364,11 @@
         <div class="footer-product">
           <h1>Product</h1>
           <ul>
-            <li><a href="#">Universal patty</a></li>
-            <li><a href="#">Plantain Tart</a></li>
-            <li><a href="#">Turnover</a></li>
-            <li><a href="#">Breads</a></li>
-            <li><a href="#">Bulla</a></li>
+            <li><a href="./product.html">Universal patty</a></li>
+            <li><a href="./product.html">Plantain Tart</a></li>
+            <li><a href="./product.html">Turnover</a></li>
+            <li><a href="./product.html">Breads</a></li>
+            <li><a href="./product.html">Bulla</a></li>
           </ul>
         </div>
         <div class="footer-product">
@@ -386,7 +384,7 @@
           <h1>Company</h1>
           <ul>
             <li><a href="#">Condition</a></li>
-            <li><a href="#">Open A Shop</a></li>
+            <li><a href="./product.html"> Shop</a></li>
             <li><a href="#">Terms</a></li>
             <li><a href="#">Technology</a></li>
           </ul>
@@ -394,10 +392,10 @@
         <div class="footer-product">
           <h1>Supports</h1>
           <ul>
-            <li><a href="#">Getting Started</a></li>
+            <li><a href="#">tarted</a></li>
             <li><a href="#">Help Center</a></li>
-            <li><a href="#">Features</a></li>
-            <li><a href="#">Reports A Blog</a></li>
+            <li><a href="#">Contact</a></li>
+            <li><a href="#">Blog</a></li>
             <li><a href="#">Bulla</a></li>
           </ul>
         </div>
