--- a/cart.html
+++ b/cart.html
@@ -17,26 +17,36 @@
         <div class="left-navbar">
           <img height="90px" src="./img/logo.png" alt="logo" />
           <span class="divider">|</span>
-          <ul class="nav-items">
+          <ul class="nav-items" id="MenuItems">
             <li><a href="index.html">Home</a></li>
-            <li><a href="./About/About.html">About</a></li>
-            <li><a href="./product/product.html">Product</a></li>
-            <li><a href="order.html">Order</a></li>
-            <li><a href="./Contact/contact.html">Contact</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="product.html">Product</a></li>
+
+            <li><a href="contact.html">Contact</a></li>
           </ul>
         </div>
         <div class="right-navbar">
           <ul class="nav-items">
             <li>
-              <a href="index.html"
+              <a class="cursor-pointer" onclick="gotoCart()"
                 ><i class="fa-solid fa-cart-shopping"></i>Cart
                 <span id="cartItemCount"></span>
               </a>
             </li>
-            <li><a href="index.html" id="userAccount">Login</a></li>
+            <li>
+              <a
+                class="cursor-pointer"
+                onclick="loginButtonClicked()"
+                id="userAccount"
+                >Login</a
+              >
+            </li>
           </ul>
         </div>
       </nav>
+      <div class="hamburger" onclick="menutoggle()">
+        <i class="fa-solid fa-bars"></i>
+      </div>
     </header>
     <!-- Navigation bar ends -->
 
@@ -94,11 +104,11 @@
         <div class="footer-product">
           <h1>Product</h1>
           <ul>
-            <li><a href="#">Universal patty</a></li>
-            <li><a href="#">Plantain Tart</a></li>
-            <li><a href="#">Turnover</a></li>
-            <li><a href="#">Breads</a></li>
-            <li><a href="#">Bulla</a></li>
+            <li><a href="./product.html">Universal patty</a></li>
+            <li><a href="./product.html">Plantain Tart</a></li>
+            <li><a href="./product.html">Turnover</a></li>
+            <li><a href="./product.html">Breads</a></li>
+            <li><a href="./product.html">Bulla</a></li>
           </ul>
         </div>
         <div class="footer-product">
@@ -114,7 +124,7 @@
           <h1>Company</h1>
           <ul>
             <li><a href="#">Condition</a></li>
-            <li><a href="#">Open A Shop</a></li>
+            <li><a href="./product.html"> Shop</a></li>
             <li><a href="#">Terms</a></li>
             <li><a href="#">Technology</a></li>
           </ul>
@@ -122,10 +132,10 @@
         <div class="footer-product">
           <h1>Supports</h1>
           <ul>
-            <li><a href="#">Getting Started</a></li>
+            <li><a href="#">tarted</a></li>
             <li><a href="#">Help Center</a></li>
-            <li><a href="#">Features</a></li>
-            <li><a href="#">Reports A Blog</a></li>
+            <li><a href="#">Contact</a></li>
+            <li><a href="#">Blog</a></li>
             <li><a href="#">Bulla</a></li>
           </ul>
         </div>
