made message submit in Contact page

--- a/contact.html
+++ b/contact.html
@@ -75,15 +75,7 @@
               required
             />
           </div>
-          <div class="form-group">
-            <input
-              type="email"
-              id="email"
-              name="email"
-              placeholder="Your Email"
-              required
-            />
-          </div>
+          
 
           <div class="form-group">
             <input
@@ -226,5 +218,6 @@
     <!-- End Toasts -->
     <script src="./js/db.js"></script>
     <script src="./js/index.js"></script>
+    <script src="./js/contact.js"></script>
   </body>
 </html>
